[package]
name = "democratic_pq_cle"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
nalgebra = "0.33"
num = "0.4"
rand_core = { version = "0.6", features = ["getrandom"] }
rand_chacha = "0.3"
sha3 = "0.10"
verifiable_secret_sharing = {git = "https://github.com/thomasarmel/verifiable-secret-sharing.git"}
num-primes = "0.3"
num-bigint = { version = "0.4.6", features = ["rand"] }
binary_polynomial_mod_algebra = "0.0.1"